2010-05-10  Jer Noble  <jer.noble@apple.com>

        Unreviewed.

        Adding myself as a committer.

        * Scripts/webkitpy/common/config/committers.py:

2010-05-10  Hans Wennborg  <hans@chromium.org>

        Reviewed by Jeremy Orlow.

        [Chromium] Add quota parameter to WebViewClient::createSessionStorageNamespace()
        https://bugs.webkit.org/show_bug.cgi?id=38750

        Put a per-origin quota on session storage since it is using memory in
        the browser process, and should not be allowed to grow arbitrarily
        large. See also http://trac.webkit.org/changeset/58828.

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::createSessionStorageNamespace):
        * DumpRenderTree/chromium/WebViewHost.h:

2010-05-10  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Simon Hausmann.

        [Qt] Roll-out r59020 and r59021, because the Qt part of these changes
        haven't been landed in Qt trunk yet. Should be rolled-in again after the merge.

        https://bugs.webkit.org/show_bug.cgi?id=32967

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::WebPage::WebPage):
        (WebCore::DumpRenderTree::DumpRenderTree):
        * DumpRenderTree/qt/DumpRenderTreeQt.h:

2010-05-09  Daniel Bates  <dbates@rim.com>

        Reviewed by Chris Jerdonek.

        https://bugs.webkit.org/show_bug.cgi?id=38812

        Make the regular expressions for parsing the start of an SVN
        and Git header global variables since they are used throughout
        VCSUtils.pm.

        * Scripts/VCSUtils.pm:

2010-05-09  Chris Jerdonek  <cjerdonek@webkit.org>

        Reviewed by Daniel Bates.

        Finished moving the header-parsing logic from svn-apply and -unapply
        to VCSUtils.pm's parsing methods.

        https://bugs.webkit.org/show_bug.cgi?id=38802

        * Scripts/VCSUtils.pm:
          - Added to parseGitDiffHeader() the ability to parse and store