@@ -167,13 +167,6 @@ class Executive(object):
         # machines.
         return 2
 
-    # Executive unit tests uses this information to validate that
-    # kill_process/kill_all work as expected an cause the expected exit codes.
-    # We store this information in this file to keep it next to the platform ifs.
-    # taskkill.exe causes processes to exit 0, otherwise processes exit -SIGNAL
-    _KILL_PROCESS_KILLED_PROCESS_EXIT_CODE = 0 if sys.platform == "windows" else -signal.SIGKILL
-    _KILL_ALL_KILLED_PROCESS_EXIT_CODE = 0 if sys.platform in ("windows", "cygwin") else -signal.SIGTERM
-
     def kill_process(self, pid):
         """Attempts to kill the given pid.
         Will fail silently if pid does not exist or insufficient permisssions."""
