@@ -72,12 +72,16 @@ class ExecutiveTest(unittest.TestCase):
 
     def test_kill_process(self):
         executive = Executive()
-        # FIXME: This may need edits to work right on windows.
         # We use "yes" because it loops forever.
         process = subprocess.Popen(["yes"], stdout=subprocess.PIPE)
         self.assertEqual(process.poll(), None)  # Process is running
         executive.kill_process(process.pid)
-        self.assertEqual(process.wait(), executive._KILL_PROCESS_KILLED_PROCESS_EXIT_CODE)
+        # Note: Can't use a ternary since signal.SIGKILL is undefined for sys.platform == "windows"
+        if sys.platform == "windows":
+            expected_exit_code = 0  # taskkill.exe results in exit(0)
+        else:
+            expected_exit_code = -signal.SIGKILL
+        self.assertEqual(process.wait(), expected_exit_code)
         # Killing again should fail silently.
         executive.kill_process(process.pid)
 
@@ -97,11 +101,15 @@ class ExecutiveTest(unittest.TestCase):
 
     def test_kill_all(self):
         executive = Executive()
-        # FIXME: This may need edits to work right on windows.
         # We use "yes" because it loops forever.
         process = subprocess.Popen(["yes"], stdout=subprocess.PIPE)
         self.assertEqual(process.poll(), None)  # Process is running
         executive.kill_all("yes")
-        self.assertEqual(process.wait(), executive._KILL_ALL_KILLED_PROCESS_EXIT_CODE)
+        # Note: Can't use a ternary since signal.SIGTERM is undefined for sys.platform == "windows"
+        if sys.platform in ("windows", "cygwin"):
+            expected_exit_code = 0  # taskkill.exe results in exit(0)
+        else:
+            expected_exit_code = -signal.SIGTERM
+        self.assertEqual(process.wait(), expected_exit_code)
         # Killing again should fail silently.
         executive.kill_all("yes")
